<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.i012114.tallercuatro.UnoFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/head1"

            />
        <TextView
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_1"
            android:textSize="80sp"
            android:textColor="@color/colorBlanco"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_2"
            android:textSize="20sp"
            android:textColor="@color/colorNegro"
            android:layout_below="@id/txt_1"
            android:layout_alignLeft="@id/txt_1"
            android:paddingLeft="50dp"
            android:paddingTop="40dp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/txt_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_3"
            android:textSize="20sp"
            android:layout_below="@id/txt_1"
            android:layout_centerHorizontal="true"
            android:paddingTop="40dp"
            android:layout_toRightOf="@id/txt_2"
            android:textColor="@color/colorNaranja"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/txt_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_4"
            android:layout_centerInParent="true"
            android:textColor="@color/colorNegro"
            android:textSize="20dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/d1"
                        android:layout_margin="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="10dp"

                        />
                    <TextView
                        android:id="@+id/txt_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_5"
                        android:layout_below="@id/image2"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/txt_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_6"
                        android:layout_below="@id/txt_5"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp"/>

                    <TextView
                        android:id="@+id/txt_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_7"
                        android:textColor="@color/colorGris"
                        android:layout_below="@id/txt_5"
                        android:layout_toRightOf="@id/txt_6"/>

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/d2"
                        android:layout_margin="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="10dp"
                        />

                    <TextView
                        android:id="@+id/txt_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_8"
                        android:layout_below="@id/image3"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="76dp"
                        android:textColor="@color/colorPrimary"/>
                    <TextView
                        android:id="@+id/txt_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_9"
                        android:layout_below="@id/txt_8"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="116dp"/>
                </RelativeLayout>
                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/d1"
                        android:layout_margin="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="10dp"

                        />
                    <TextView
                        android:id="@+id/txt_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_5"
                        android:layout_below="@id/image4"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/txt_11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_6"
                        android:layout_below="@id/txt_10"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp"/>

                    <TextView
                        android:id="@+id/txt_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_7"
                        android:textColor="@color/colorGris"
                        android:layout_below="@id/txt_10"
                        android:layout_toRightOf="@id/txt_11"/>

                    <ImageView
                        android:id="@+id/image5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/d2"
                        android:layout_margin="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="10dp"
                        />

                    <TextView
                        android:id="@+id/txt_13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_8"
                        android:layout_below="@id/image5"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="76dp"
                        android:textColor="@color/colorPrimary"/>
                    <TextView
                        android:id="@+id/txt_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_9"
                        android:layout_below="@id/txt_13"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="116dp"/>
                </RelativeLayout>

            </LinearLayout>


        </ScrollView>

    </LinearLayout>



</LinearLayout>
